Fix "jumping" when switching to floating header.

--- a/neat/static/style/screen.css
+++ b/neat/static/style/screen.css
@@ -175,7 +175,7 @@ article .body ul {
 }
 
 article .body-padding {
-    padding-top: 64px;
+    padding-top: 58px;
 }
 
 article ul.tags {
